@@ -1,0 +1,24 @@
+#
+# An example stemming dictionary file for Morfologik filter.
+#
+# Compile with Morfologik-stemming, see
+# https://github.com/morfologik/morfologik-stemming/wiki/Examples
+#
+
+# Author of the dictionary.
+fsa.dict.author=Acme Inc.
+
+# Date the dictionary data was assembled (not compilation time!).
+fsa.dict.created=2015/10/08 09:16:00
+
+# The license for the dictionary data.
+fsa.dict.license=ASL 2.0
+
+# Character encoding inside the automaton (and input file).
+fsa.dict.encoding=UTF-8
+
+# field separator (lemma;inflected;tag)
+fsa.dict.separator=;
+
+# type of base/lemma compression encoding before automaton compression.
+fsa.dict.encoder=INFIX
