@@ -1,0 +1,2 @@
+lemma1;inflected1;tag1
+lemma2;inflected2;tag2
